# cafe

./: .env.example  .gitignore  README.md  config.json  docker-compose.yml  example.py  main.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  setup-mailserver.sh  tailwind.config.ts  token.pickle  vite.config.ts
.upm/: store.json
attached_assets/: Pasted--rest-express-1-0-0-dev-tsx-server-index-ts-Starting-Python-FastAPI-server-Python-script-path-1736226700670.txt  Pasted--tsx-server-index-ts-Starting-Python-FastAPI-server-Python-script-path-home-runner-SuperAIFlo-1736227514268.txt  Pasted-Client-connected-to-WebSocket-Python-server-error-INFO-127-0-0-1-49304-WebSocket-ws--1736184557732.txt  Pasted-Python-server-OpenAI-API-WebSocket-WebSocket-WebSocket--1736214643870.txt  Pasted-The-above-error-occurred-in-the-ForwardRef-MotionComponent-component-at-MotionComponent-ht-1736228038983.txt
client/src/: index.css
config/mailserver/: Dockerfile  postfix-main.cf  postfix-sasl-password.cf  setup.sh
core/: auto_plan_agent.py  base_agent.py  base_flow.py  graph_rag_manager.py  llm.py  modular_code_manager.py  planning_flow.py  project_environment.py  script_templates.py  task_database.py  tool_agent.py
core/tools/: base_tool.py  docker_execute.py  file_tool.py  package_manager.py  planning_tool.py  python_execute.py  python_project_execute.py  system_tool.py
db/: index.ts  schema.ts
docs/: WORKFLOW.md
server/: Dockerfile  __init__.py  alembic.ini  cafe.db  docker_manager.py  main.py  models.py  requirements.txt  run.py  superagi_manager.py  superagi_server.py  workflow_manager.py
server/api/: admin.py  websocket_handler.py
server/auth/: google_auth.py
(+22 files in other folders)
