[project]
name = "cafe"
version = "0.1.0"
description = "Composite AI Flow Engine - A self-learning, autonomous AI agent for workflow automation"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "aiohttp>=3.11.1",
    "fastapi>=0.96.0",
    "openai>=1.59.0",
    "pydantic>=1.10.19",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.15",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
    "langchain>=0.3.15",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "docker>=7.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.86.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "semantic-kernel>=1.20.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=server --cov-report=term-missing"
